# foobillardplus

./: .cproject  .directory  .gitignore  .project  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  buildme.sh  config.status  configure  configure.in  configure.lineno  foobillardplus.desktop  foobillardplus.spec  foobillardplus.spec.in  foobillardplus.xbm
.github/workflows/: ci.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
contrib/: blutooth.c  collision.c  double.c.c  fastexp.c  fastmath  fastmath.c  fastmath2  fastmath2.c  float.c  ip.c  ip1.c  utf8.c
data/: .directory  browser.sh
data/html/: history.xml  history.xsl  styles.css  tournament.xml  tournament.xsl
data/locale/css/: help.css  help1.css
data/locale/de/: foobillard.txt  index.html  index_a.html  wetab-foobillard.txt
data/locale/en/: foobillard.txt  index.html  index_a.html  wetab-foobillard.txt
data/locale/en-uk/: foobillard.txt
data/locale/en-us/: foobillard.txt
data/locale/es/: foobillard.txt  index.html  index_a.html  wetab-foobillard.txt
data/locale/img/: .directory
data/locale/ru/: foobillard.txt  index.html  index_a.html  wetab-foobillard.txt
data/music/: music.txt
debian/: changelog  control  copyright  rules
osx/: Foobillard++-Info.plist  Foobillard++-Prefix.pch  SDLMain.h  SDLMain.m  config.h  config.m  foobillardplus.icns
osx/Foobillard++.xcodeproj/: project.pbxproj
osx/Foobillard++.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/Foobillard++.xcodeproj/project.xcworkspace/xcuserdata/julian.xcuserdatad/: UserInterfaceState.xcuserstate
src/: .directory  Ceiling_light.h  Makefile  Makefile.am  Makefile.in  aiplayer.c  aiplayer.h  ball.c  ball.h  barchair.h  bartable.h  billard.c  billard.h  billard3d.c  billard3d.h  billmove.c  billmove.h  bottle.c  bottle.h  bumpref.c  bumpref.h  burlap_sofa.h  cartoonguy.c  cartoonguy.h  ceilinglamp_high.c  ceilinglamp_high.h  chess.c  chess.h  config.h  config.h.in  evaluate_move.c  evaluate_move.h  fire.c  fire.h  fireplace.h  fireplace_high.c  fireplace_high.h  flower.c  flower.h  font.c  (+38 more)
src-graphics/: cabinet-back.xcf  cabinet-frame.xcf  cabinet.xcf  cartoon-guy.blend  chair.blend  english.xcf  fb-log.xcf  fb-logo-blank.xcf  final matt.blend  fireplace.blend  fireplace2.blend  half_symbol.xcf  kugeln.xcf  logo-blank.xcf  metal_glass_table_bone.blend  metal_glass_table_texture.blend  mleft.xcf  mleftnormal.xcf  mright.xcf  mright1.xcf  pfeilrad.xcf  pod.blend  sofa.blend  voll64x64.xcf  weiss-fertig.xcf  window-big.xcf  wine_glass.blend
src/.deps/: aiplayer.Po  ball.Po  billard.Po  billard3d.Po  billmove.Po  bumpref.Po  evaluate_move.Po  font.Po  helpscreen.Po  language.Po  menu.Po  mesh.Po  net_socket.Po  options.Po  png_loader.Po  queue.Po  room.Po  sound_stuff.Po  sys_stuff.Po  table.Po  textobj.Po  vmath.Po
